Fixed hello world for -dev4

--- a/hello-esm-js/package.json
+++ b/hello-esm-js/package.json
@@ -11,7 +11,7 @@
 		"start": "npx http-server app"
 	},
 	"dependencies": {
-		"desk-frame": "next",
-		"@desk-framework/webcontext": "next"
+		"@desk-framework/frame-core": "next",
+		"@desk-framework/frame-web": "next"
 	}
 }
