--- a/hello-iife-js/package.json
+++ b/hello-iife-js/package.json
@@ -11,10 +11,7 @@
 		"start": "npx http-server app"
 	},
 	"dependencies": {
-		"desk-frame": "next",
-		"@desk-framework/webcontext": "next"
-	},
-	"devDependencies": {
-		"http-server": "latest"
+		"@desk-framework/frame-core": "next",
+		"@desk-framework/frame-web": "next"
 	}
 }
