--- a/hello-parcel-ts/package.json
+++ b/hello-parcel-ts/package.json
@@ -12,8 +12,8 @@
 		"build": "npm run clean && parcel build app/index.html"
 	},
 	"dependencies": {
-		"desk-frame": "next",
-		"@desk-framework/webcontext": "next"
+		"@desk-framework/frame-core": "next",
+		"@desk-framework/frame-web": "next"
 	},
 	"devDependencies": {
 		"rimraf": "5.0",
